--- a/po/de.po
+++ b/po/de.po
@@ -822,14 +822,14 @@ msgid ""
 "{{rb:to the windy road}} {{bb:~}}"
 msgstr ""
 "{{rb:Benutze den Befehl}} {{yb:mv basket ~/}} {{rb:um den}} {{bb:Korb}} "
-"{{rb:in den windigen Weg zu bewegen}} {{bb:~}}"
+"{{rb:in den verschlungenen Weg zu bewegen}} {{bb:~}}"
 
 #: ../linux_story/story/challenges/challenge_13.py:61
 msgid ""
 "Now follow the {{bb:basket}}. Use {{yb:cd}} by itself to {{lb:go}} to the "
 "windy road Tilde {{bb:~}}.\n"
 msgstr ""
-"Jetzt folge dem {{bb:Korb}}. Benutze {{yb:cd}} allein, um zur windigen "
+"Jetzt folge dem {{bb:Korb}}. Benutze {{yb:cd}} allein, um zur verschlungenen "
 "Straße Tilde {{bb:~}} zu {{lb:gehen}}.\n"
 
 #: ../linux_story/story/challenges/challenge_13.py:85
@@ -837,7 +837,7 @@ msgid ""
 "You are now back on the long windy road. {{lb:Look around}} with {{yb:ls}} "
 "to check that you have your {{bb:basket}} with you.\n"
 msgstr ""
-"Du bist jetzt wieder auf der langen, windigen Straße. Schau dich mit 'ls' "
+"Du bist jetzt wieder auf der langen, verschlungenen Straße. Schau dich mit 'ls' "
 "um, um zu überprüfen, dass du deinen Korb dabei hast.\n"
 
 #: ../linux_story/story/challenges/challenge_13.py:95
@@ -870,7 +870,7 @@ msgid ""
 "{{rb:Use the command}} {{yb:mv basket ~/}} {{rb:to move the basket to the "
 "windy road ~}}"
 msgstr ""
-"{{rb:Verwende den Befehl}} {{yb:mv basket ~/}} {{rb:um den Korb zur windigen"
+"{{rb:Verwende den Befehl}} {{yb:mv basket ~/}} {{rb:um den Korb zur verschlungenen"
 " Straße zu bewegen ~}}"
 
 #: ../linux_story/story/challenges/challenge_14.py:170
@@ -1279,7 +1279,7 @@ msgstr "Gibt es hier in der Nähe einen Bauernhof?"
 #: ../linux_story/story/challenges/challenge_17.py:188
 msgid "Apparently it's not far from our house, just off the windy road...\n"
 msgstr ""
-"Anscheinend ist es nicht weit von unserem Haus, gleich abseits der windigen "
+"Anscheinend ist es nicht weit von unserem Haus, gleich abseits der verschlungenen "
 "Straße...\n"
 
 #: ../linux_story/story/challenges/challenge_17.py:189
@@ -1495,7 +1495,7 @@ msgid ""
 "You are back on the windy road, which stretches endlessly in both directions. \n"
 "{{lb:Look around.}}"
 msgstr ""
-"Du bist wieder auf der windigen Straße, die sich in beide Richtungen endlos erstreckt. \n"
+"Du bist wieder auf der verschlungenen Straße, die sich in beide Richtungen endlos erstreckt. \n"
 "{{lb:Schau dich um.}}"
 
 #: ../linux_story/story/challenges/challenge_18.py:63
@@ -6046,7 +6046,7 @@ msgid ""
 "{{rb:To talk to your Mum, type}} {{yb:cat Mum}} {{rb:and press}} "
 "{{ob:Enter}}{{rb:.}}"
 msgstr ""
-"Um mit deiner Mutter zu sprechen, tippe {{yb:cat Mum}} und drücke "
+"{{rb:Um mit deiner Mutter zu sprechen, tippe}} {{yb:cat Mum}} {{rb:und drücke}} "
 "{{ob:Enter}}."
 
 #: ../linux_story/story/challenges/challenge_6.py:34
@@ -6054,9 +6054,8 @@ msgid ""
 "{{wb:Mum:}} {{Bb:\"You couldn't find him? That's strange, he never leaves "
 "home without telling me first.\""
 msgstr ""
-"}}\n"
-"\n"
-"Mum: \"Du hast ihn nicht gefunden? Das ist seltsam, er verlässt nie das Haus, ohne mir vorher Bescheid zu sagen.\""
+"{{wb:Mum:}} {{Bb:\"Du hast ihn nicht gefunden? Das ist seltsam, er verlässt "
+"nie das Haus, ohne mir vorher Bescheid zu sagen.\""
 
 #: ../linux_story/story/challenges/challenge_6.py:35
 msgid ""
@@ -6064,14 +6063,15 @@ msgid ""
 "talking about on the news. Why don't you go and check? I'll stay here in "
 "case he comes back.\"}}\n"
 msgstr ""
-"Vielleicht ist er zu dem Stadtrat mit dem Bürgermeister gegangen, über den "
-"sie in den Nachrichten gesprochen haben. Warum gehst du nicht und überprüfst"
-" es? Ich bleibe hier, falls er zurückkommt.\n"
+"\"Vielleicht ist er zur Versammlung mit dem Bürgermeister gegangen, über die "
+"sie in den Nachrichten berichtet haben. Geh doch mal hin und schau nach. "
+"Ich bleibe hier, falls er zurückkommt.\"}}\n"
 
 #: ../linux_story/story/challenges/challenge_6.py:37
 msgid ""
 "Let's head to {{bb:town}}. To leave the house, use {{yb:cd}} by itself."
-msgstr "Gehen wir in die Stadt. Um das Haus zu verlassen, benutze cd allein."
+msgstr "Gehen wir in die {{bb:Stadt (town)}}. Um das Haus zu verlassen, "
+"benutze {{yb:cd}} allein."
 
 #: ../linux_story/story/challenges/challenge_6.py:42
 msgid "{{rb:Type}} {{yb:cd}} {{rb:to start the journey.}}"
@@ -6081,28 +6081,28 @@ msgstr "{{rb:Gib}} {{yb:cd}} {{rb:ein, um die Reise zu starten.}}"
 msgid ""
 "You're out of the house and on the long windy road called Tilde, or {{bb:~}}"
 msgstr ""
-"Du bist aus dem Haus und auf der langen, windigen Straße namens Tilde, oder "
-"{{bb:~}}."
+"Du bist raus aus dem Haus und auf der langen, verschlungenen Straße namens Tilde, "
+"oder auch {{bb:~}}."
 
 #: ../linux_story/story/challenges/challenge_6.py:54
 msgid "{{lb:Look around}} again to see where to go next."
-msgstr "Schau nochmal herum, um zu sehen, wohin du als nächstes gehen sollst."
+msgstr "{{lb:Schau nochmal herum}}, um zu sehen, wohin du als nächstes gehen solltest."
 
 #: ../linux_story/story/challenges/challenge_6.py:59
 msgid "{{rb:Stuck? Type}} {{yb:ls}} {{rb:to look around.}}"
-msgstr "{{rb:Feststecken? Tippe}} {{yb:ls}} {{rb:ein, um dich umzusehen.}}"
+msgstr "{{rb:Du steckst fest? Tippe}} {{yb:ls}} {{rb:, um dich umzusehen.}}"
 
 #: ../linux_story/story/challenges/challenge_6.py:67
 msgid ""
 "You can see a {{bb:town}} in the distance! Let's {{lb:go}} there using "
 "{{lb:cd}}."
 msgstr ""
-"Du kannst eine Stadt in der Ferne sehen! Lass uns dorthin gehen, indem wir "
-"cd benutzen."
+"Du kannst eine {{bb:Stadt (town)}} in der Ferne sehen! Lass uns dorthin "
+"{{lb:gehen}}, indem wir {{lb:cd}} benutzen."
 
 #: ../linux_story/story/challenges/challenge_6.py:72
 msgid "{{rb:Type}} {{yb:cd town}} {{rb:to walk into town.}}"
-msgstr "{{yb:Tippe}} {{rb:cd town}} {{yb:ein, um in die Stadt zu gehen.}}"
+msgstr "{{rb:Tippe}} {{yb:cd town}} {{rb:ein, um in die Stadt zu gehen.}}"
 
 #: ../linux_story/story/challenges/challenge_7.py:20
 msgid "Have a {{lb:look around}} to see what's going on!"
@@ -6122,20 +6122,19 @@ msgstr ""
 
 #: ../linux_story/story/challenges/challenge_7.py:38
 msgid "{{rb:Stuck? Type:}} {{yb:cat Mayor}}"
-msgstr "{{rb:Stuck? Type:}} {{yb:Katzenbürgermeister}}"
+msgstr "{{rb:Du steckst fest? Tippe:}} {{yb:cat Mayor}}"
 
 #: ../linux_story/story/challenges/challenge_7.py:46
 msgid ""
 "{{wb:Mayor:}} {{Bb:\"Calm down please! We have our best people looking into "
 "the disappearances, and we're hoping to have an explanation soon.\"}}\n"
 msgstr ""
-"{{Bb:Bürgermeister:}} Beruhige dich bitte! Unsere besten Leute untersuchen "
-"die Verschwinden und wir hoffen bald eine Erklärung zu haben.\n"
+"{{Bb:Bürgermeister:}} {{Bb:\"Beruhige dich bitte! Unsere besten Leute untersuchen "
+"das Verschwinden der Personen und wir hoffen bald eine Erklärung zu haben.\"}}\n"
 
 #: ../linux_story/story/challenges/challenge_7.py:47
 msgid "Something strange is happening. Better check everyone is ok."
-msgstr ""
-"Etwas Seltsames passiert. Besser überprüfen, dass alle in Ordnung sind."
+msgstr "Da ist Seltsames im Gange. Besser wir schauen, ob alle in Ordnung sind."
 
 #: ../linux_story/story/challenges/challenge_7.py:48
 msgid "Type {{yb:cat}} to check on the people."
@@ -6147,23 +6146,23 @@ msgid ""
 "bell ring, and now my legs have gone all strange.\"}}"
 msgstr ""
 "{{wb:Man:}} {{Bb:\"Hilfe! Ich weiß nicht, was mit mir passiert. Ich habe "
-"diese Glocke hören läuten und jetzt sind meine Beine ganz seltsam.\"}}"
+"diese Glocke läuten hören und jetzt sind meine Beine ganz seltsam.\"}}"
 
 #: ../linux_story/story/challenges/challenge_7.py:57
 msgid ""
 "{{wb:Girl:}} {{Bb:\"Can you help me? I can't find my friend Amy anywhere. If"
 " you see her, will you let me know?\"}}"
 msgstr ""
-"{{Bb:Mädchen:}} Kannst du mir helfen? Ich kann meine Freundin Amy nirgends "
-"finden. Wenn du sie siehst, lässt du es mich dann wissen?"
+"{{wb:Mädchen:}} {{Bb:\"Kannst du mir helfen? Ich kann meine Freundin Amy nirgends "
+"finden. Wenn du sie siehst, lässt du es mich dann wissen?\"}}"
 
 #: ../linux_story/story/challenges/challenge_7.py:58
 msgid ""
 "{{wb:Boy:}} {{Bb:\"Pongo? Pongo? Has anyone seen my dog Pongo? He's never "
 "run away before...\"}}"
 msgstr ""
-"{{Bb:Junge:}} Pongo? Pongo? Hat jemand meinen Hund Pongo gesehen? Er ist "
-"noch nie weggelaufen..."
+"{{wb:Junge:}} {{Bb:\"Pongo? Pongo? Hat jemand meinen Hund Pongo gesehen? Er ist "
+"noch nie weggelaufen...\"}}"
 
 #: ../linux_story/story/challenges/challenge_7.py:90
 msgid ""
